--- a/DND/Views/Shared/Footer/_Footer.cshtml
+++ b/DND/Views/Shared/Footer/_Footer.cshtml
@@ -19,6 +19,7 @@
                         <a title="Instagram" href="@System.Configuration.ConfigurationManager.AppSettings["InstagramLink"]" target="_blank"><img src="~/images/insta.png" alt="Instagram" /></a>
                         <a title="Facebook" href="@System.Configuration.ConfigurationManager.AppSettings["FacebookLink"]" target="_blank"><img src="~/images/fb.png" alt="Facebook" /></a>
                         <a title="LinkedIn" href="@System.Configuration.ConfigurationManager.AppSettings["LinkedInLink"]" target="_blank"><img src="~/images/linkedin.png" alt="LinkedIn" /></a>
+                        <a title="GitHub" href="@System.Configuration.ConfigurationManager.AppSettings["GitHubLink"]" target="_blank"><img src="~/images/github.jpg" alt="GitHub" /></a>
                         @*<a class="logo" href="http://www.skyscanner.net">Powered by <img width="211" height="47" alt="Skyscanner" src="~/images/Skyscanner-Logo-Original-white.png"></a>*@
                     </div>
 
