--- a/DND/Views/Blog/Post.cshtml
+++ b/DND/Views/Blog/Post.cshtml
@@ -116,7 +116,7 @@
             }
 
             @Html.Raw(Model.Description)
-            @if (Model.ShowPhotosInAlbum && !string.IsNullOrEmpty(Model.Album))
+            @if (Model.ShowPhotosInAlbum && !string.IsNullOrEmpty(Model.Album) && Server.FolderExists(Server.GetFolderPhysicalPathById(Folders.Gallery) + Model.Album))
             {
                 <div class="card-columns-md-2 card-spacer-bottom">
                     @foreach (FileInfo file in Html.FileSystemRepositoryFactory().CreateFileRepositoryReadOnly(default(CancellationToken), Server.GetFolderPhysicalPathById(Folders.Gallery) + Model.Album, true, "*.*", ".jpg", ".jpeg", ".mp4", ".txt").GetAll(LamdaHelper.GetOrderByFunc<FileInfo>
