--- a/DND/Views/Blog/_BlogPostTemplate.cshtml
+++ b/DND/Views/Blog/_BlogPostTemplate.cshtml
@@ -64,7 +64,10 @@
 
     <!--Short Description-->
     <div class="blog-post-body">
-        @Html.Partial("_Media", mainPhotoVideo, new ViewDataDictionary { { "width", 500 }, { "link", (Url.Action<BlogController>(c => c.Post(Model.DateCreated.Year, Model.DateCreated.Month, Model.UrlSlug))) } })
+        @if (mainPhotoVideo != null)
+        {
+            @Html.Partial("_Media", mainPhotoVideo, new ViewDataDictionary { { "width", 500 }, { "link", (Url.Action<BlogController>(c => c.Post(Model.DateCreated.Year, Model.DateCreated.Month, Model.UrlSlug))) } })
+        }     
         <br />
         <br />
         <p>@Html.Raw(Model.ShortDescription)</p>
