--- a/DND/Views/Home/Index.cshtml
+++ b/DND/Views/Home/Index.cshtml
@@ -86,7 +86,9 @@
 @if (data.Count() > 0)
 {
     <div class="parallax hidden-md-down" style="background-image: url('@(data[0].VirtualPathSlug())');">
-
+        <h4 class="parallax-caption">
+            @(data[0].Caption())
+        </h4>
     </div>
 }
 
@@ -116,7 +118,9 @@
 @if (data.Count() > 1)
 {
     <div class="parallax hidden-md-down" style="background-image: url('@(data[1].VirtualPathSlug())');">
-
+        <h4 class="parallax-caption">
+            @(data[1].Caption())
+        </h4>
     </div>
 }
 
