--- a/DND/Views/Location/Index.cshtml
+++ b/DND/Views/Location/Index.cshtml
@@ -6,6 +6,16 @@
     ViewBag.Blog = true;
 }
 
+@using (Html.BeginForm(Html.Action(), Html.Controller(), FormMethod.Get, new { @class = "form-inline" }))
+{
+    <div class="input-group input-group-full-width mb-2">
+        @Html.TextBox("search", ViewBag.Search as string, new { placeholder = "Search", @class = "form-control" })
+        <span class="input-group-btn">
+            <input type="submit" value="Search" class="btn btn-primary" />
+        </span>
+    </div>
+}
+
 <div class="card-columns card-columns-sm-1 card-columns-md-2 card-columns-lg-2 card-columns-xl-2">
     @foreach (var location in Model.Data.Where(l => !string.IsNullOrEmpty(l.Album) && Server.GetDirectoryInfo(Folders.Gallery, l.Album) != null))
     {
@@ -26,5 +36,5 @@
     }
 </div>
 
-@{Func<int, string> link = pageIndex => Url.Action("Index", new { page = pageIndex, pageSize = Model.PageSize, orderColumn = Model.OrderColumn, orderType = Model.OrderType });}
+@{Func<int, string> link = pageIndex => Url.Action("Index", new { page = pageIndex, pageSize = Model.PageSize, orderColumn = Model.OrderColumn, orderType = Model.OrderType, search = Model.Search });}
 @HtmlHelperExtensions.BootstrapPager(Html, Model.Page, link, Model.TotalItems, Model.PageSize, 5)
