--- a/DND/css/site-xs.css
+++ b/DND/css/site-xs.css
@@ -812,3 +812,7 @@ a.shadow img, img.shadow {
 .img-shadow {
   box-shadow:  0px 2px 5px 0px rgba(0,0,0,0.16), 0px 2px 10px 0px rgba(0,0,0,0.12);
 }
+
+.input-group-full-width {
+    width: 100% !important;
+}
