--- a/DND/Views/Shared/_Media.cshtml
+++ b/DND/Views/Shared/_Media.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FileInfo
 
-<div class="card card-spacer-bottom card-spacer-top" style="display:inline-flex; width:100%">
+<div class="card card-spacer-bottom card-spacer-top media-item" style="display:inline-flex; width:100%">
     @{
         var link = Model.VirtualPathSlug(1600);
 
