--- a/DND/Views/Gallery/Gallery.cshtml
+++ b/DND/Views/Gallery/Gallery.cshtml
@@ -20,17 +20,22 @@
     </div>
 </div>
 
-<div class="instafeed card-columns-md-2 gallery">
-    @foreach (var item in Model.Data)
-    {
-        if (!files.Contains(item.Name))
-        {
-            @Html.Partial("_Media", item, new ViewDataDictionary { { "width", 0 } })
-            files.Add(item.Name);
-        }
-    @*<div class="card-spacer">&nbsp;</div>*@
-    }
+<div class="instafeed card-columns-md-2 gallery" id="gallery" data-infinite-scroll='{ "button" : ".view-more-button", "scrollThreshold" : false, "path": ".pagination__next", "append": ".media-item", "status":".page-load-status", "hideNav" : ".pagination-nav" , "history" : false }'>
+    @Html.Partial("_GalleryList", Model)
 </div>
+
+<div class="page-load-status" style="display:none">
+    <div class="loader-ellips infinite-scroll-request">
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+    </div>
+    <p class="infinite-scroll-last"></p>
+    <p class="infinite-scroll-error"></p>
+</div>
+
+<p><button class="view-more-button btn btn-primary">View more</button></p>
 
 @{Func<int, string> link = pageIndex => Url.Action("Gallery", new { name = ViewContext.RouteData.Values["name"], page = pageIndex });}
 @HtmlHelperExtensions.BootstrapPager(Html, Model.Page, link, Model.TotalItems, Model.PageSize, 5)
