--- a/DND/Views/Shared/_Media.cshtml
+++ b/DND/Views/Shared/_Media.cshtml
@@ -28,6 +28,14 @@
         {
             <video class="full-width-height" src="@url" @if(!string.IsNullOrEmpty(poster)){<text>poster="@poster" preload="none"</text>}else{<text>preload="metadata"</text>} controls></video>
         }
+        else if (url.ToLower().Contains("you"))
+        {
+            <div>
+                <div class="youtube-container">
+                    <iframe src="@url" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        }
         else
         {
             <a class="card-img-top gallery-image" href="@url" title="@Model.CaptionWithDate()">
