--- a/DND/css/site-xs.less
+++ b/DND/css/site-xs.less
@@ -845,3 +845,19 @@ a.shadow img, img.shadow {
 .pointer {
     cursor: pointer;
 }
+
+.youtube-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.youtube-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
