--- a/DND/Views/Blog/_BlogPostTemplate.cshtml
+++ b/DND/Views/Blog/_BlogPostTemplate.cshtml
@@ -10,7 +10,7 @@
             var id = mainPhotoVideoText.ReadFileLine(0);
             if (id.IsYouTube())
             {
-                mainImageShare = id.YouTubeThumbailUrl();
+                mainImageShare = id.YouTubeMaxResThumbailUrl();
             }
             else
             {
