--- a/DND/Views/Blog/Post.cshtml
+++ b/DND/Views/Blog/Post.cshtml
@@ -11,7 +11,7 @@
             var id = mainPhotoVideoText.ReadFileLine(0);
             if (id.IsYouTube())
             {
-                mainImageShare = id.YouTubeThumbailUrl();
+                mainImageShare = id.YouTubeMaxResThumbailUrl();
             }
             else
             {
