--- a/DND/Views/Blog/_BlogPostTemplate.cshtml
+++ b/DND/Views/Blog/_BlogPostTemplate.cshtml
@@ -85,7 +85,7 @@
     <div class="blog-post-body">
         @if (mainPhotoVideoText != null)
         {
-            @Html.Partial("_Media", mainPhotoVideoText, new ViewDataDictionary { { "width", 500 }, { "link", (Url.Action<BlogController>(c => c.Post(Model.DateCreated.Year, Model.DateCreated.Month, Model.UrlSlug))) } })
+            @Html.Partial("_Media", mainPhotoVideoText, new ViewDataDictionary { { "width", 800 }, { "height", 500 }, { "link", (Url.Action<BlogController>(c => c.Post(Model.DateCreated.Year, Model.DateCreated.Month, Model.UrlSlug))) } })
         }     
         <br />
         <br />
